--- a/wp-content/plugins/beers/package.json
+++ b/wp-content/plugins/beers/package.json
@@ -16,5 +16,10 @@
 	},
 	"devDependencies": {
 		"@wordpress/scripts": "^27.1.0"
+	},
+	"dependencies": {
+		"@wordpress/dom-ready": "^3.50.0",
+		"@wordpress/element": "^5.27.0",
+		"axios": "^0.24.0"
 	}
 }
