--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ wp-config.php
 # Example plugin
 /wp-content/plugins/hello.php
 wp-content/plugins/wp-laravel-dd-master/
+api-products/
 
 # Uploads
 /wp-content/uploads/
